[package]
name = "rustishka"
version = "0.1.0"
authors = ["kromgart <kromgart@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bytes = "1"
atoi = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"

webpki = "0.21"
webpki-roots = "0.21"
der-parser = "5"
x509-parser = "0.9"
rcgen = { version = "0.8", features = ["pem", "x509-parser"] }

rustls = "0.19"
tokio-rustls = "0.22"
# httparse = "1.3"
# http = "0.2"
hyper = { version = "0.14", features = ["tcp", "client", "http1", "http2", "server"] }
